--- a/Css/contact.css
+++ b/Css/contact.css
@@ -11,7 +11,6 @@
 
 body {
     margin: 0px;
-    overflow: hidden; 
 }
 
 #sneaker_haven {
@@ -22,6 +21,8 @@ body {
 header {
     background-color: #483C32;
     height: 100px;
+    display: flex;
+    width: 100%;
 }
 
 #left_header {
@@ -34,50 +35,40 @@ header {
 #nav_for_header {
     display: flex;
     font-size: 40px;
+    height: 100px;
     justify-content: space-between;
-}
-
-#link_1 {
-    position: absolute;
-    right: 100px;
-    top: -40px;
-    color: white;
+    margin-left: 200px;
 }
 
 #contacts {
     text-decoration: none;
     color: white;
     font-family: Averia Serif Libre;
-}
-
-
-#link_2 {
-    position: absolute;
-    right: 450px;
-    top: 0px;
+    max-width: 300px;
+    width: 300px;
+    
 }
 
 #products {
     text-decoration: none;
     color: white;
     font-family: Averia Serif Libre;
-}
-
-#link_3 {
-    position: absolute;
-    right: 800px;
-    top: 0px;
+    padding-bottom: 55px;
+    max-width: 300px;
+    width: 300px;  
 }
 
 #homepage {
     text-decoration: none;
     color: white;
     font-family: Averia Serif Libre;
+    padding-left: 25px;
 }
 
 #sneaker_left_haven {
     padding-left: 60px;
 }
+
 /* End of header CSS */
 
 #contact_container {
@@ -150,4 +141,40 @@ img {
     width: 530px;
     height: 75px;
     border-radius: 10px;
+}
+
+@media (max-width: 600px)  {
+    
+    header {
+        height: 30vh;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    #nav_for_header {
+        flex-direction: column;
+        font-size: 35px;
+    }
+
+    #contacts {
+        padding-bottom: 30px;
+        padding-right: 0px;
+        width: 50%;
+    }
+
+    #products {
+        padding-bottom: 25px;
+        padding-right: 0px;
+        width: 50%;
+    }
+
+    #homepage {
+        margin-top: 0%;
+        padding-right: 0px;
+        width: 50%;
+    }
+
+    #left_header {
+        display: none;
+    }
 }
