--- a/Css/index.css
+++ b/Css/index.css
@@ -10,7 +10,6 @@
 
 body {
     margin: 0px;
-    overflow: hidden;
 }
 
 #sneaker_haven {
@@ -21,6 +20,8 @@ body {
 header {
     background-color: #483C32;
     height: 100px;
+    display: flex;
+    width: 100%;
 }
 
 #left_header {
@@ -34,37 +35,26 @@ header {
     display: flex;
     font-size: 40px;
     height: 100px;
-    align-items: center;
-    justify-content: space-around;
-}
-
-#link_1 {
-    color: white;
+    justify-content: space-between;
+    margin-left: 200px;
 }
 
 #contacts {
     text-decoration: none;
     color: white;
     font-family: Averia Serif Libre;
-}
-
-
-#link_2 {
-    position: absolute;
-    right: 450px;
-    top: 0px;
+    max-width: 300px;
+    width: 300px;
+    
 }
 
 #products {
     text-decoration: none;
     color: white;
     font-family: Averia Serif Libre;
-}
-
-#link_3 {
-    position: absolute;
-    right: 800px;
-    top: -40px;
+    padding-bottom: 55px;
+    max-width: 300px;
+    width: 300px;  
 }
 
 #homepage {
@@ -177,4 +167,40 @@ img {
     max-width: 500px;
     max-height: 500px;
     border-radius: 5px;
+}
+
+@media (max-width: 600px)  {
+    
+    header {
+        height: 30vh;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    #nav_for_header {
+        flex-direction: column;
+        font-size: 35px;
+    }
+
+    #contacts {
+        padding-bottom: 25px;
+        padding-right: 0px;
+        width: 50%;
+    }
+
+    #products {
+        padding-bottom: 25px;
+        padding-right: 0px;
+        width: 50%;
+    }
+
+    #homepage {
+        margin-top: 0%;
+        padding-right: 0px;
+        width: 50%;
+    }
+
+    #left_header {
+        display: none;
+    }
 }
