--- a/Css/products.css
+++ b/Css/products.css
@@ -10,17 +10,18 @@
 
 body {
     margin: 0px;
-
 }
 
 #sneaker_haven {
     margin-top: 0px;
-    padding-left: 20px; 
+    padding-left: 20px;
 }
 
 header {
     background-color: #483C32;
     height: 100px;
+    display: flex;
+    width: 100%;
 }
 
 #left_header {
@@ -33,39 +34,27 @@ header {
 #nav_for_header {
     display: flex;
     font-size: 40px;
+    height: 100px;
     justify-content: space-between;
-}
-
-#link_1 {
-    position: absolute;
-    right: 100px;
-    top: 0px;
-    color: white;
+    margin-left: 200px;
 }
 
 #contacts {
     text-decoration: none;
     color: white;
     font-family: Averia Serif Libre;
-}
-
-
-#link_2 {
-    position: absolute;
-    right: 450px;
-    top: 0px;
+    max-width: 300px;
+    width: 300px;
+    
 }
 
 #products {
     text-decoration: none;
     color: white;
     font-family: Averia Serif Libre;
-}
-
-#link_3 {
-    position: absolute;
-    right: 800px;
-    top: 0px;
+    padding-bottom: 55px;
+    max-width: 300px;
+    width: 300px;  
 }
 
 #homepage {
@@ -147,4 +136,44 @@ header {
 
 img {
     box-shadow: 5px 5px 25px black;
+}
+
+@media (max-width: 600px)  {
+    
+    body {
+        overflow: hidden;
+    }
+    
+    header {
+        height: 30vh;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    #nav_for_header {
+        flex-direction: column;
+        font-size: 35px;
+    }
+
+    #contacts {
+        padding-bottom: 25px;
+        padding-right: 0px;
+        width: 50%;
+    }
+
+    #products {
+        padding-bottom: 25px;
+        padding-right: 0px;
+        width: 50%;
+    }
+
+    #homepage {
+        margin-top: 0%;
+        padding-right: 0px;
+        width: 50%;
+    }
+
+    #left_header {
+        display: none;
+    }
 }
